# edge-cloud-ai

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start-cloud.ps1  start.ps1  start.sh
cloud/: config.py  main.py
cloud/agent/: __init__.py  llm_config.py  orchestrator.py  prompts.py
cloud/agent/models/: __init__.py  openai_provider.py
cloud/agent/toolkit/: __init__.py  base.py  defect_detail.py  defect_history.py  defect_stats.py  generate_report.py  registry.py  search_standards.py  web_search.py
cloud/api/: deps.py  routes_chat.py  routes_defects.py  routes_detect.py  routes_llm.py  routes_report.py  routes_stats.py  routes_system.py
cloud/db/: engine.py  models.py  session.py
cloud/db/migrations/: env.py
cloud/db/migrations/versions/: 0001_initial_schema.py  0002_enable_pgvector.py  0003_quality_standards.py  0004_llm_profiles.py
cloud/mqtt/: handler.py
cloud/rag/: __init__.py  embedding.py  ingest.py  retriever.py  splitter.py
cloud/schemas/: __init__.py  common.py  detection.py
cloud/services/: chat.py  review.py
docker/: Dockerfile.cloud  docker-compose.yml  mosquitto.conf  nginx.conf
edge/: config.py  main.py  server.py  service.py  stream.py  tracking.py
edge/api/: routes.py
edge/capture/: camera.py
edge/classify/: alert.py  decision.py
edge/inference/: detector.py  visual.py
edge/network/: __init__.py  http_client.py  mqtt_client.py  offline_cache.py
edge/training/: config.py
edge/training/scripts/: convert.py  download.py  export.py  generate_test_video.py  train.py  validate.py
scripts/: build_poster.py  seed_standards.py
web/: .env.development  .env.production  index.html  package-lock.json  package.json
web/src/: App.vue
web/src/api/: client.js
web/src/assets/: style.css
web/src/router/: index.js
web/src/views/: Chat.vue  Dashboard.vue  Logs.vue  Monitor.vue  SystemStatus.vue
